syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserService {
  rpc FindAll (google.protobuf.Empty) returns (UserReply) {}
}

message UserReply {
  repeated User users = 1;
}

message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
}
